<resources>
    <string name="app_name">Iconos Redes</string>
    <string name="twitterIcon">Twitter</string>
    <string name="instagramIcon">Instagram</string>
    <string name="facebookIcon">Facebook</string>
    <string name="AppIcon">Button</string>
    <string name="ImagenIcon">TODO</string>
    <string name="petslandT">petsland</string>
    <string name="item1">Registro</string>
    <string name="item2">Perfil de mascotas</string>
    <string name="item3">Actualizar Datos</string>
    <string name="item4">Versión</string>
</resources>