<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="410dp"
        android:layout_height="220dp"
        android:contentDescription="@string/ImagenIcon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052"
        app:srcCompat="@drawable/redes_sociales__uso_1000x500_1"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imageButtonF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/facebookIcon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.534"
        app:srcCompat="@drawable/face" />

    <ImageButton
        android:id="@+id/imageButtonI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:contentDescription="@string/instagramIcon"
        app:layout_constraintStart_toEndOf="@+id/imageButtonF"
        app:layout_constraintTop_toTopOf="@+id/imageButtonF"
        app:srcCompat="@drawable/insta" />

    <ImageButton
        android:id="@+id/imageButtonT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/twitterIcon"
        app:layout_constraintStart_toEndOf="@+id/imageButtonI"
        app:layout_constraintTop_toTopOf="@+id/imageButtonI"
        app:srcCompat="@drawable/twi"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:contentDescription="@string/petslandT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonI"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/petsland" />


</androidx.constraintlayout.widget.ConstraintLayout>